Add basic HTML structure with header and main sections

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>metalbat</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREgn3OHnTAKgzsHj2XWgs303obSzZCGsizjA&s" width="100" >
+        <nav>
+            <a href="#">Contato</a>
+            <a href="#">Sobre</a>
+            <a href="#">Login</a>
+
+        </nav>
+
+        <main>
+            <section>
+                <img src="https://static.vecteezy.com/ti/fotos-gratis/t2/24270849-lindo-dalgona-beber-uma-espumoso-cafe-dentro-uma-transparente-caneca-e-flores-lilas-para-roxa-il-roxa-fundo-proximo-para-a-caneca-e-uma-ramo-do-lilas-flores-dentro-uma-branco-vaso-copia-de-espaco-foto.jpg" >
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias voluptas quaerat numquam at recusandae mollitia, nam dolor nisi earum eligendi? Rerum esse voluptatum velit quasi veniam mollitia facilis quo error.</p>
+            </section>
+            <section></section>
+        </main>
+
+    </header>
+</body>
+</html>
